[package]
name = "binary_rw"
version = "0.2.0"
edition = "2021"
description = "Simple BinaryManager to read & write to buffer"
authors = ["Phill030"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.47"
anyhow = "1.0.75"
