[package]
name = "binary_modifier"
version = "0.3.3"
edition = "2021"
description = "binary_modifier is a simple library to read & write to buffer"
authors = ["Phill030"]
license = "MIT"
categories = ["binary", "read", "write", "buffer", "modify"]


[dependencies]
thiserror = "1.0.47"
anyhow = "1.0.75"
